Fixed nav bar on mobile

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
   text-transform: uppercase;
   text-align: center;
   margin: 5px;
+  margin-top: 55px; /*to make it display below the nav bar*/
 }
 
 nav{
